Correction to z-index for combo-box drop lists

--- a/Survey/source/styles/_o-select-combobox.scss
+++ b/Survey/source/styles/_o-select-combobox.scss
@@ -45,6 +45,7 @@
         position: absolute;
         max-height: 300px;
         overflow-y: auto;
+        z-index: 10;
     }
 
     ul.charrestriction {
